--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="_100">100</string>
     <string name="followerss">Followers</string>
     <string name="followings">Following</string>
+    <string name="copyright_nurmangg">copyright@ Nurmangg</string>
 </resources>
